Quick Fix
Squished Pictures

--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ p {
 }
 
 #about > div {
-	height: 80vh;
+	height: 100vh;
 	width: 40%;
 }
 
